WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281324
AX: Tree updates become broken when children change for a dynamically ignored element and its unignored ancestor in the same tree update cycle
https://bugs.webkit.org/show_bug.cgi?id=281324
Summary
AX: Tree updates become broken when children change for a dynamically ignored...
Tyler Wilcock
Reported
2024-10-11 12:14:25 PDT
This results in us failing to expose webpage content to ATs.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-11 12:14:36 PDT
<
rdar://problem/137765781
>
Tyler Wilcock
Comment 2
2024-10-11 12:30:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35057
EWS
Comment 3
2024-10-12 07:07:07 PDT
Committed
285073@main
(c630047b889c): <
https://commits.webkit.org/285073@main
> Reviewed commits have been landed. Closing PR #35057 and removing active labels.
EWS
Comment 4
2024-10-17 10:47:26 PDT
Committed
283286.307@safari-7620-branch
(26a35dec7192): <
https://commits.webkit.org/283286.307@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2012 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug